# comparative_study_clustering_techniques

./: README.md  pyproject.toml
jupyter/: TrabalhoFinal.ipynb  TrabalhoFinalv_2.ipynb  comparative_study_clustering_techniques.ipynb
